------------------------------------------------------------------------------
- David Cantrell <david@cantrell.org.uk> wrote the rsnapshot-diff utility
- Chris Petersen added cwrsync permanent-share support
- Robert Jackson <RobertJ@promedicalinc.com> added use_lazy_deletes
- Added rollback for backup_scripts
- Added rsnapshot-diff to Autoconf/Automake install/build process

VERSION 1.2.0 (Jan 31 21:43 2005)
------------------------------------------------------------------------------
- Turned off buffering ($|=1)
- Changed default lockfile to /var/run/rsnapshot.pid, for FHS compliance
- Clarified man page licensing (GPL)
- Fixed is_real_local_abs_path() to handle dangling symlinks
- Changed utils/backup_smb_share.sh to re-order the smbtar arguments
- Added "-uroot" to utils/backup_mysql.sh example file
- Changed regex in is_blank() subroutine
- Changed rsync include/exclude mode to relative
- Peter Palfrader <weasel@debian.org> enhanced error reporting to include
  command line options
- Bharat Mediratta <bharat@menalto.com> improved the exclusion rules to avoid
  backing up the snapshot root. The old way was also kept for users who can't
  or don't want to upgrade their destination paths in their backup points.
- Bharat Mediratta <bharat@menalto.com> added a "+" feature to the per-backup
  point args to allow additive include/exclude rules.
- Added safe_rename() subroutine to work around a semi-obscure timestamp bug
  in certain Linux kernels
- Clarified error message about local/relative paths in config file parsing
- Added check for leading/trailing spaces in remote (ssh) paths
- Added du(1) and crontab(1) to man page references
- Added config.guess and config.sub for automake
- Changed default destination paths for backup points in example config file
  for compatibility with --relative rsync flag
- Added formatting fix to show one slash only when invoking backup_script
  with link_dest option enabled