@@ -14,6 +14,8 @@
 # http://www.rsnapshot.org/
 ##############################################################################
 
+# $Id: rsnaptar,v 1.10 2005/04/02 07:37:07 scubaninja Exp $
+
 # DIRECTORIES
 TAR_DIR="/var/dvd_backup"
 SNAPSHOT_DIR="/backup/private/snapshots/daily.0"
