@@ -10,6 +10,8 @@ VERSION 1.2.1 (??? ?? ??:?? 2005)
 - Robert Jackson <RobertJ@promedicalinc.com> added use_lazy_deletes
 - Added rollback for backup_scripts
 - Added rsnapshot-diff to Autoconf/Automake install/build process
+- Added sha1sum to utils/sign_packages.sh
+- Added a CVS Id to key files
 
 VERSION 1.2.0 (Jan 31 21:43 2005)
 ------------------------------------------------------------------------------
